Added finished cake image & modified colors

--- a/FriendsWebsite/index.html
+++ b/FriendsWebsite/index.html
@@ -6,17 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mimo Doce</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <img class="logo" src="LogoMimoDoceNova.png" alt="Logo Mimo Doce">
+  <div class="image-box">
+    <img class="logo" src="LogoMimoDoceNovaBlack.png" alt="Logo Mimo Doce">
+  </div>
   <div class="header-links">
     <ul>
-      <li><a href="#">ONE</a></li>
-      <li><a href="#">TWO</a></li>
-      <li><a href="#">THREE</a></li>
+      <li><a href="#">Cardapio</a></li>
+      <li><a href="#">Eventos</a></li>
+      <li><a href="#"><i class="fa fa-whatsapp"></i>Consulte</a></li>
+      <!--Other possibilities: About, contact, history, gallery-->
     </ul>
   </div>
   <div class="title">Panificação e Confeitaria</div>
+  <div class="image-box">
+    <img class="cake" src="BigCakeNoBackground.png" alt="Big Cake">
+  </div>
+  <div class="title">Caicara, Belo Horizonte</div>
+  <div class="title">social links</div>
+
   <!-- disregard this section, it's here to give attribution to the creator of these icons 
   <div class="footer">
     <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
