added social links

--- a/FriendsWebsite/index.html
+++ b/FriendsWebsite/index.html
@@ -16,20 +16,16 @@
     <ul>
       <li><a href="#">Cardapio</a></li>
       <li><a href="#">Eventos</a></li>
-      <li><a href="#"><i class="fa fa-whatsapp"></i>Consulte</a></li>
+      <li><a href="https://wa.me/5531995359110"><i class="fa fa-whatsapp"></i>Consulte</a></li>
       <!--Other possibilities: About, contact, history, gallery-->
     </ul>
   </div>
-  <div class="title">Panificação e Confeitaria</div>
+  <div class="h1">Panificação e Confeitaria</div>
   <div class="image-box">
     <img class="cake" src="BigCakeNoBackground.png" alt="Big Cake">
   </div>
-  <div class="title">Caicara, Belo Horizonte</div>
-  <div class="title">social links</div>
+  <div class="h1">Caiçara, Belo Horizonte</div>
+  <div class="h2"><a href="https://www.instagram.com/mimodocebh/"><i class="fa fa-instagram"></i></a></div>
 
-  <!-- disregard this section, it's here to give attribution to the creator of these icons 
-  <div class="footer">
-    <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-  </div>-->
 </body>
 </html>
